@@ -1,3 +1,4 @@
+* Position copied records based on order
 * Sanitize translated RichtText fields content (issue9453)
 * Allow configuration of default colors for graph and calendar
 * Sanitize RichtText fields content (issue9405)
